--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(cudasift)
 
-find_package(OpenCV REQUIRED)
+# find_package(OpenCV REQUIRED)
 find_package(CUDA REQUIRED)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
@@ -17,19 +17,18 @@ list(APPEND CUDA_NVCC_FLAGS "-O3;-Xcompiler;-fPIC")
 
 include_directories(include)
 include_directories(${CUDA_INCLUDE_DIRS})
-include_directories(${OpenCV_INCLUDE_DIRS})
+# include_directories(${OpenCV_INCLUDE_DIRS})
 
 file(GLOB_RECURSE cuda_sources src/*.cu)
-# file(GLOB_RECURSE cpp_sources src/sift_utilities.cpp)
-set(cpp_sources src/mainSift.cpp src/geomFuncs.cpp)
+# set(cpp_sources src/mainSift.cpp src/geomFuncs.cpp)
 
 # set(CUDA_SEPARABLE_COMPILATION ON)
 
 cuda_compile(cuda_objects ${cuda_sources})
 # cuda_add_executable(cudasift ${cuda_sources} ${cpp_sources})
-add_executable(cudasift ${cuda_sources} ${cuda_objects} ${cpp_sources})
-# add_library(cudasift SHARED ${cuda_sources} ${cuda_objects} ${cpp_sources})
+# add_executable(cudasift ${cuda_sources} ${cuda_objects} ${cpp_sources})
+add_library(cudasift SHARED ${cuda_sources} ${cuda_objects} ${cpp_sources})
 # target_link_libraries(cudasift ${CUDA_LIBRARIES})
 target_link_libraries(cudasift ${CUDA_LIBRARIES} ${OpenCV_LIBS})
 
-# set_target_properties(cudasift PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(cudasift PROPERTIES LINKER_LANGUAGE CXX)
