--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,20 @@
 cmake_minimum_required(VERSION 2.8)
-project(cudasift)
+project(CudaSift)
 
 set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
 
 find_package(CUDA REQUIRED)
-# find_package(OpenCV REQUIRED)
+
+set(OTHER_INCLUDES ${CUDA_INCLUDE_DIRS})
 
 include_directories(include)
-include_directories(${CUDA_INCLUDE_DIRS})
-# include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories(${OTHER_INCLUDES})
 
 file(GLOB_RECURSE cuda_sources src/*.cu)
 set(cpp_sources src/sift_engine.cpp)
-# set(cpp_sources src/mainSift.cpp src/geomFuncs.cpp)
 
-set(CUDA_ARCH_BIN "20 30 32 35 37 50 52 61" CACHE STRING "Specify 'real' GPU arch to build binaries for, BIN(PTX) format is supported. Example: 1.3 2.1(1.3) or 13 21(13)")
+set(CUDA_ARCH_BIN "35 37 50 52 61" CACHE STRING "Specify 'real' GPU arch to build binaries for, BIN(PTX) format is supported. Example: 1.3 2.1(1.3) or 13 21(13)")
 set(CUDA_ARCH_PTX "" CACHE STRING "Specify 'virtual' PTX arch to build PTX intermediate code for. Example: 1.0 1.2 or 10 12")
 
 include(CudaComputeTargetFlags.cmake)
@@ -25,7 +24,42 @@ list(APPEND CUDA_NVCC_FLAGS "-O3;-Xcompiler;-fPIC;-std=c++11")
 
 cuda_compile(cuda_objects ${cuda_sources})
 
-set(CMAKE_CXX_FLAGS ${ADDITIONAL_CMAKE_CXX_FLAGS} "-O3 -msse2 -msse3 -Wall -std=c++11")
+set(CMAKE_CXX_FLAGS ${ADDITIONAL_CMAKE_CXX_FLAGS} "-O3 -msse2 -msse3 -std=c++11")
 
-add_library(cudasift SHARED ${cuda_sources} ${cuda_objects} ${cpp_sources})
-target_link_libraries(cudasift ${CUDA_LIBRARIES})
+add_library(${PROJECT_NAME} SHARED ${cuda_sources} ${cuda_objects} ${cpp_sources})
+target_link_libraries(${PROJECT_NAME} ${CUDA_LIBRARIES})
+
+# Package config files
+
+file(REMOVE "${CMAKE_BINARY_DIR}/${PROJECT_NAME}Targets.cmake")
+export(TARGETS ${PROJECT_NAME} APPEND FILE "${CMAKE_BINARY_DIR}/${PROJECT_NAME}Targets.cmake")
+
+set(CMAKECONFIG_INSTALL_DIR lib/cmake/${PROJECT_NAME})
+file(RELATIVE_PATH REL_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/${CMAKECONFIG_INSTALL_DIR}" "${CMAKE_INSTALL_PREFIX}/include")
+
+# Build tree config
+set(EXPORT_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
+configure_file(${CMAKE_SOURCE_DIR}/${PROJECT_NAME}Config.cmake.in ${CMAKE_BINARY_DIR}/${PROJECT_NAME}Config.cmake @ONLY IMMEDIATE)
+
+# Install tree config
+set(EXPORT_INCLUDE_DIR "\${PROJECT_CMAKE_DIR}/${REL_INCLUDE_DIR}")
+configure_file(${CMAKE_SOURCE_DIR}/${PROJECT_NAME}Config.cmake.in ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${PROJECT_NAME}Config.cmake @ONLY)
+
+# Add package to CMake package registery for use from the build tree
+option(EXPORT_${PROJECT_NAME} "Export ${PROJECT_NAME} package for use by other software" ON)
+if(EXPORT_${PROJECT_NAME})
+    export(PACKAGE ${PROJECT_NAME})
+endif()
+
+# Install target
+
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+
+install(FILES "${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/${PROJECT_NAME}Config.cmake" DESTINATION ${CMAKECONFIG_INSTALL_DIR})
+install(EXPORT ${PROJECT_NAME}Targets DESTINATION ${CMAKECONFIG_INSTALL_DIR})
+
+# Uninstall target
+
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)
+add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
